--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@contentstack/delivery-sdk": "^4.9.0",
+    "@contentstack/management": "^1.25.0",
     "@langchain/core": "^0.3.74",
     "@langchain/langgraph": "^0.4.9",
     "@langchain/openai": "^0.6.11",
